# walder

./: Cargo.toml  Dockerfile  README.md  ROADMAP.md
crates/wallsetter-cli/: Cargo.toml
crates/wallsetter-cli/src/: main.rs
crates/wallsetter-core/: Cargo.toml
crates/wallsetter-core/src/: error.rs  lib.rs  models.rs  traits.rs
crates/wallsetter-db/: Cargo.toml
crates/wallsetter-db/src/: lib.rs
crates/wallsetter-downloader/: Cargo.toml
crates/wallsetter-downloader/src/: lib.rs
crates/wallsetter-provider/: Cargo.toml
crates/wallsetter-provider/src/: lib.rs  wallhaven.rs
crates/wallsetter-scheduler/: Cargo.toml
crates/wallsetter-scheduler/src/: lib.rs
crates/wallsetter-setter/: Cargo.toml
crates/wallsetter-setter/src/: lib.rs
scripts/: build-macos-dmg.sh
src/: app.rs  main.rs  theme.rs
src/views/: author.rs  bookmarks.rs  downloads.rs  mod.rs  preview.rs  search.rs  settings.rs
