[package]
name = "wallsetter-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wallsetter-cli"
path = "src/main.rs"

[dependencies]
wallsetter-core.workspace = true
wallsetter-provider.workspace = true
wallsetter-downloader.workspace = true
wallsetter-setter.workspace = true
wallsetter-db.workspace = true
wallsetter-scheduler.workspace = true

clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
directories.workspace = true
indicatif.workspace = true
chrono.workspace = true
futures.workspace = true
