[package]
name = "wallsetter-db"
version.workspace = true
edition.workspace = true

[dependencies]
wallsetter-core.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
directories.workspace = true
uuid.workspace = true
