[package]
name = "wallsetter-provider"
version.workspace = true
edition.workspace = true

[dependencies]
wallsetter-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
url.workspace = true
chrono.workspace = true
futures.workspace = true
